kubernetes-manifests/monitoring/alertmanager/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress.dtlp.cc
spec:
  rules:
    - host: alertmanager.dtlp.cc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`alertmanager.dtlp.cc`)
      services:
        - name: alertmanager
          kind: Service
          port: 9093
          sticky:
            cookie: {}
  tls: {}
